<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="#404040">
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/trim_background"
            android:gravity="center"
            android:id="@+id/headerMain"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="4dp">
        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:id="@+id/playNameMain"
                  android:textStyle="bold"
                  android:layout_marginStart="10dp"
                  android:gravity="center"
                  android:textSize="20sp"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:id="@+id/levelMain"
                  android:textSize="14sp"
                  android:text="Level: 2"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center"
                  android:textSize="14sp"
                  android:text="Gold: 1000000"
                  android:layout_marginEnd="4dp"
                  android:id="@+id/goldMain"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:background="@drawable/main_background"
                  android:orientation="horizontal">
        <LinearLayout android:layout_width="0dp"
                      android:layout_weight="1"
                      android:orientation="vertical"
                      android:layout_height="match_parent">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="50dp"
                          android:orientation="horizontal">
                <Button android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textColor="@color/whiteText"
                        android:layout_margin="8dp"
                        android:textSize="14sp"
                        android:id="@+id/changeCharacter"
                        android:background="@drawable/trim_background"
                        android:text="@string/change_character"/>
                <Button android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textColor="@color/whiteText"
                        android:layout_margin="8dp"
                        android:textSize="14sp"
                        android:id="@+id/buyCharacter"
                        android:background="@drawable/trim_background"
                        android:text="@string/buy_character"/>

            </LinearLayout>
            <RelativeLayout android:layout_width="match_parent"
                            android:layout_height="match_parent">
                <ImageView android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:id="@+id/characterPhoto"
                           android:padding="75dp"
                           android:src="@drawable/human"/>
                <TextView android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:textColor="@color/goldText"
                          android:padding="8dp"
                          android:textSize="30sp"
                          android:id="@+id/gold2000Text"
                          android:gravity="center"
                          android:textStyle="bold"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="0dp"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_weight="1">
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/whiteText"
                      android:padding="8dp"
                      android:gravity="center"
                      android:text="@string/quests"
                      android:textSize="30sp"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/whiteText"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:id="@+id/quest1"
                    android:background="@drawable/trim_background"
                    android:text="@string/quest_1"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/whiteText"
                    android:layout_margin="8dp"
                    android:textSize="14sp"
                    android:id="@+id/quest2"
                    android:background="@drawable/trim_background"
                    android:text="@string/quest_2"/>
            <Button android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/whiteText"
                    android:layout_margin="8dp"
                    android:id="@+id/quest3"
                    android:textSize="14sp"
                    android:background="@drawable/trim_background"
                    android:text="@string/quest_3"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>